--- a/kahoot.html
+++ b/kahoot.html
@@ -9,7 +9,7 @@
   <body>
     <header class="app-header">
       <h1>Quiz Semanal</h1>
-      <a href="home.html" style="color: white; text-decoration: underline"
+      <a href="index.html" style="color: white; text-decoration: underline"
         >&larr; Volver al inicio</a
       >
     </header>
